tests/backend/zero_alloc_checker/fail20.output
File "fail20.ml", line 7, characters 5-15:
Error: Annotation check for zero_alloc strict failed on function Fail20.foo1 (camlFail20.foo1_HIDE_STAMP)

File "fail20.ml", line 8, characters 16-25:
Error: allocation of 32 bytes on a path to exceptional return (fail20.ml:8,16--25;fail20.ml:3,18--29)

File "fail20.ml", line 13, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail20.foo (camlFail20.foo_HIDE_STAMP)

File "fail20.ml", line 17, characters 6-19:
Error: called function may allocate (direct call camlFail20.bar_HIDE_STAMP)

File "fail20.ml", line 19, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail20.zee (camlFail20.zee_HIDE_STAMP)

File "fail20.ml", line 19, characters 27-56:
Error: called function may allocate (direct tailcall camlFail20.foo_HIDE_STAMP)
